<resources>
    <string name="app_name">Verdeando</string>
    <string name="page_title" />
    <string name="text_label_1" />
    <string name="text_label_2" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Verdenado" />
    <string name="Inicio" />
    <string name="Perfil" />
    <string name="Ajustes" />
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_nav_bar">Nav_bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Registro-->
    <string name="Registro">FORMULARIO DE REGISTRO</string>
    <string name="ingresarCorreo">INGRESA UN CORREO ELECTRÓNICO</string>
    <string name="ingresarContraseña">INGRESA UNA CONTRASEÑA</string>
    <string name="ingresarNombre"> NOMBRES COMPLETOS</string>
    <string name="ingresarApellidos"> APELLIDOS COMPLETOS</string>
    <string name="edad">EDAD</string>
    <string name="nCelular">NÚMERO TELEFÓNICO</string>
    <string name="direccion">DIRECCIÓN</string>
    <string name="btnRegistrarse">REGISTRARME</string>


    <!--Inicio Sesión-->
    <string name="ingresarEmail">INGRESA TU CORREO</string>
    <string name="ingresarContra">INGRESA TU CONTRASEÑA</string>
    <string name="Login">INGRESAR</string>
    <string name="btnRegistrar">REGISTRARSE</string>
    <string name="btnGoogle">INICIAR SESIÓN CON GOOGLE</string>
    <string name="btnReset">CAMBIAR CONTRASEÑA</string>

    <!--Perfil-->
    <string name="uidTxt">Uid: </string>
    <string name="uidPerfil"> -- </string>
    <string name="correoTxt">Correo: </string>
    <string name="correoPerfil"> -- </string>
    <string name="nombresTxt">Nombres: </string>
    <string name="nombresPerfil"> -- </string>

    <!--Menú-->
    <string name="misDatosOpcion">Mis Datos</string>
    <string name="crearPublicacion">Crear Post</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="sitios">Sitios Verdes</string>
    <string name="chatOpcion">Chats</string>
    <string name="cSesion">Cerrar Sesión</string>

    <!--Mis datos-->
    <string name="MisDatos">MIS DATOS PERSONALES</string>
    <string name="uidDato"> -- </string>
    <string name="uidDatoTXT">UID: </string>
    <string name="NombreDato"> -- </string>
    <string name="NombreDatoTXT">Nombres: </string>
    <string name="ApellidosDato"> -- </string>
    <string name="ApellidosDatoTXT">Apellidos: </string>
    <string name="CorreoDato"> -- </string>
    <string name="CorreoDatoTXT">Correo: </string>
    <string name="ContraseñaDato"> -- </string>
    <string name="ContraseñaDatoTXT">Contraseña: </string>
    <string name="EdadDato"> -- </string>
    <string name="EdadDatoTXT">Edad: </string>
    <string name="TelefonoDato"> -- </string>
    <string name="TelefonoDatoTXT">Número Telefónico: </string>
    <string name="DireccionDato"> -- </string>
    <string name="DireccionDatoTXT">Dirección: </string>
    <string name="ActualizarDatos">Actualizar Datos</string>
    <string name="ActualizarPass">Cambiar Contraseña</string>
    <string name="title_activity_maps1">MapsActivity1</string>

</resources>