<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BB868"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!--TITULO-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <!--LOGO-->
       <androidx.appcompat.widget.AppCompatImageView
           android:layout_width="200dp"
           android:layout_height="200dp"
           android:src="@drawable/verdeando"
           android:layout_marginTop="10dp">

       </androidx.appcompat.widget.AppCompatImageView>

        <!--CORREO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/ingresarEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresarEmail">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ingresarContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresarContra">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>
        
        <Button
            android:id="@+id/Login"
            android:text="@string/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        </Button>

        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        </Button>



    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>