<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:background="@drawable/inicio"
    android:layout_height="match_parent"
    tools:context=".Perfil">




    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp">

            <!--Portada-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="center"
                android:src="@drawable/fondo2"

                >

            </androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                android:padding="10dp">

                <!--Foto de perfil-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/foto_perfil"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="160dp"
                    android:background="@drawable/fotoPerfil"
                    android:padding="3dp"
                    android:scaleType="centerCrop">

                </androidx.appcompat.widget.AppCompatImageView>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/iudTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/uidTxt"
                            android:textColor="@color/black">

                        </TextView>

                        <TextView
                            android:id="@+id/uidPerfil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/uidPerfil"
                            android:textColor="@color/black">

                        </TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!--CORREO-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/correoTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/correoTxt"
                            android:textColor="@color/black">

                        </TextView>

                        <TextView
                            android:id="@+id/correoPerfil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/correoPerfil"
                            android:textColor="@color/black">

                        </TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!--Nombres-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/nombresTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombresTxt"
                            android:textColor="@color/black">

                        </TextView>

                        <TextView
                            android:id="@+id/nombresPerfil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/nombresPerfil"
                            android:textColor="@color/black">

                        </TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Menú de opciones-->

                <!--Opcion 1-2-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <!--Mis Datos-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/datos" />

                        <Button
                            android:id="@+id/misDatosOpcion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rectangle_3"
                            android:text="@string/misDatosOpcion" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/crear" />

                        <Button
                            android:id="@+id/crearPublicacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/rectangle_3"
                            android:text="@string/crearPublicacion" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Opcion 3-4-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <!--Publicaciones-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/publiIcon" />

                        <Button
                            android:id="@+id/publicaciones"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rectangle_3"
                            android:text="@string/publicaciones" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <!--Usuarios-->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/mapaIcono" />

                        <Button
                            android:id="@+id/sitios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/rectangle_3"
                            android:text="@string/sitios" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--Opcion 5-6-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/juegos" />

                        <Button
                            android:id="@+id/Juego"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rectangle_3"
                            android:text="JUEGOS" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:src="@drawable/salida" />

                        <Button
                            android:id="@+id/cSesion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/rectangle_3"
                            android:text="@string/cSesion" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>





        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>




</RelativeLayout>